# azplugins

./: .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .ruff.toml  AnisoPairPotentials.h  BondEvaluatorDoubleWell.h  BondEvaluatorFENEAsh24.h  BondPotentials.cuh  BounceBackGeometry.h  BounceBackNVEGPU.h  CHANGELOG.rst  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  ChangeLog.md  DPDEvaluatorGeneralWeight.h  DPDPotentials.cuh  DPDPotentials.h  FindHOOMD.cmake  FlowFields.h  ImplicitDropletEvaporator.cc  ImplicitDropletEvaporator.h  ImplicitDropletEvaporatorGPU.cc  ImplicitEvaporator.h  ImplicitEvaporatorGPU.h  ImplicitPlaneEvaporator.h  ImplicitPlaneEvaporatorGPU.cu  ImplicitPlaneEvaporatorGPU.cuh  ImplicitPlaneEvaporatorGPU.h  LICENSE  LICENSE.md  MPCDReversePerturbationFlow.cc  MPCDReversePerturbationFlowGPU.cuh  OrientationRestraintCompute.cc  OrientationRestraintCompute.h  OrientationRestraintComputeGPU.cc  (+40 more)
.circleci/: config.yml
.github/workflows/: test.yml  unit-test.yaml
CMake/: FindHOOMD.cmake  find_hoomd.py  parse_version.py
azplugins/: AnisoPairEvaluator.h  AnisoPairEvaluatorTwoPatchMorse.h  AnisoPairPotentialTwoPatchMorse.cu  AnisoPairPotentials.cu  AnisoPairPotentials.cuh  AnisoPairPotentials.h  BondEvaluatorDoubleWell.h  BondEvaluatorFENE.h  BondEvaluatorFENEAsh24.h  BondPotentials.cu  BondPotentials.cuh  BondPotentials.h  BounceBackGeometry.cc  BounceBackGeometry.h  BounceBackNVE.h  BounceBackNVEGPU.cu  BounceBackNVEGPU.cuh  BounceBackNVEGPU.h  CMakeLists.txt  ComputeThermoSLLOD.cc  ComputeThermoSLLOD.h  ComputeThermoSLLODGPU.cc  ComputeThermoSLLODGPU.cu  ComputeThermoSLLODGPU.cuh  ComputeThermoSLLODGPU.h  DPDEvaluatorGeneralWeight.h  DPDPotentialGeneralWeight.cu  DPDPotentials.cu  DPDPotentials.cuh  DPDPotentials.h  DynamicBondUpdater.cc  DynamicBondUpdater.h  DynamicBondUpdaterGPU.cc  DynamicBondUpdaterGPU.cu  DynamicBondUpdaterGPU.cuh  DynamicBondUpdaterGPU.h  FlowFields.h  GroupVelocityCompute.cc  GroupVelocityCompute.h  HOOMDAPI.h  (+197 more)
azplugins/test/: CMakeLists.txt  example_test.cc  upp11_config.h
azplugins/test-py/: CMakeLists.txt  test_analyze_group_velocity.py  test_analyze_rdf.py  test_bond_double_well.py  test_bond_fene.py  test_bond_fene24.py  test_dpd_general.py  test_dynamic_bond.py  test_evaporate_implicit.py  test_evaporate_particles.py  test_flow_brownian.py  test_flow_constant.py  test_flow_flow_profiler.py  test_flow_langevin.py  test_flow_parabolic.py  test_flow_quiescent.py  test_flow_reverse_perturbation.py  test_flow_sllod.py  test_integrate_slit.py  test_integrate_slit_pore.py  test_mpcd_anti_sym_cos.py  test_mpcd_reverse_perturbation.py  test_mpcd_sin_channel.py  test_mpcd_sin_expansion_constriction.py  test_mpcd_sine.py  test_mpcd_sinusoidal_channel.py  test_mpcd_sinusoidal_expansion_constriction.py  test_mpcd_sym_cos.py  test_mpcd_velocity_compute.py  test_pair_ashbaugh.py  test_pair_ashbaugh24.py  test_pair_colloid.py  test_pair_hertz.py  test_pair_lj124.py  test_pair_lj96.py  test_pair_slj.py  test_pair_spline.py  test_pair_two_patch_morse.py  test_restrain_cylinder.py  test_restrain_orientation.py  (+10 more)
doc/: conf.py  credits.rst  environment.yaml  environment.yml  index.rst  license.rst  mock_install.py  module-azplugins-bond.rst  module-azplugins-compute.rst  module-azplugins-external.rst  module-azplugins-flow.rst  module-azplugins-pair.rst  module-azplugins-update.rst  module-azplugins-wall.rst  release.rst  requirements.txt
doc/source/: conf.py  credits.rst  developer.rst  index.rst  installation.rst  license.rst  release.rst
src/: AnisoPairEvaluator.h  AnisoPairEvaluatorTwoPatchMorse.h  AnisoPairPotentialTwoPatchMorse.cu  AnisoPairPotentials.cuh  AnisoPairPotentials.h  AnisoPotentialPairGPUKernel.cu.inc  BinningOperation.h  BondEvaluator.h  BondEvaluatorDoubleWell.h  BondEvaluatorFENEAsh24.h  BondEvaluatorQuartic.h  BondPotentials.cu  BondPotentials.cuh  BondPotentials.h  BounceBackGeometry.cc  BounceBackGeometry.h  BounceBackNVEGPU.cu  CMakeLists.txt  CartesianBinningOperation.h  ChebyshevAnisotropicPairPotential.cc  ChebyshevAnisotropicPairPotential.h  ChebyshevAnisotropicPairPotentialGPU.cuh  ChebyshevAnisotropicPairPotentialGPU.h  ChebyshevAnisotropicPairPotentialGPUKernel.cu.inc  ChebyshevTensorAnisotropicPairPotential.h  ConstantFlow.cc  ConstantFlow.h  CylindricalBinningOperation.h  CylindricalFlowProfileCompute.cc  CylindricalVelocityFieldCompute.cc  DPDEvaluatorGeneralWeight.h  DPDPairEvaluatorGeneralWeight.h  DPDPotentialGeneralWeight.cu  DPDPotentials.cuh  DPDPotentials.h  DynamicBondUpdater.cc  DynamicBondUpdater.h  DynamicBondUpdaterGPU.cc  DynamicBondUpdaterGPU.cu  DynamicBondUpdaterGPU.cuh  (+191 more)
src/pytest/: CMakeLists.txt  __init__.py  test_bond.py  test_bond_fene24.py  test_chebyshev.py  test_compute.py  test_dpd.py  test_dynamic_bond.py  test_external.py  test_flow.py  test_flow_profile.py  test_flow_reverse_perturbation.py  test_mpcd_sinusoidal_channel.py  test_mpcd_velocity_compute.py  test_pair.py  test_pair_aniso.py  test_pair_dpd.py  test_pair_hertz.py  test_perturbedljevap.py  test_variant.py  test_wall.py
test/: CMakeLists.txt  example_test.cc  upp11_config.h
test-py/: test_analyze_rdf.py  test_bond_fene.py  test_evaporate_implicit.py  test_evaporate_particles.py  test_flow_constant.py  test_flow_parabolic.py  test_flow_quiescent.py  test_flow_reverse_perturbation.py  test_mpcd_reverse_perturbation.py  test_pair_ashbaugh.py  test_pair_ashbaugh24.py  test_pair_lj124.py  test_pair_slj.py  test_pair_spline.py  test_restrain_plane.py  test_restrain_position.py  test_special_pair_lj96.py  test_update_type.py  test_variant_sphere_area.py  test_wall_colloid.py  test_wall_lj93.py
tutorials/: Index.ipynb
tutorials/01_reverse_perturbation/: 01_reverse_perturbation_1_LJ.ipynb  01_reverse_perturbation_1_LJ.py  01_reverse_perturbation_2_mpcd.ipynb  01_reverse_perturbation_2_mpcd.py
tutorials/02_evaporation/: 02_explicit_evaporation.ipynb  02_explicit_evaporation.py  02_implicit_film_evaporation.ipynb  02_implicit_film_evaporation.py
(+89 files in other folders)
